2007-10-13  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/Utils.py: uses MAX_AGE_PROB_ALIVE, MAX_SIB_AGE_DIFF, MIN_GENERATION_YEARS, AVG_GENERATION_GAP from Config (Bug #1217)
	* src/Config/_GrampsConfigKeys.py: added MAX_AGE_PROB_ALIVE, MAX_SIB_AGE_DIFF, MIN_GENERATION_YEARS, AVG_GENERATION_GAP

2007-10-13  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/Calendar.py: no negative years on calendar (no events show before they occur)
	* src/plugins/Calendar.py: uses StringOption in MenuOption
	* src/ReportBase/_MenuOptions.py: adds StringOption (one line text entry)
	* src/ReportBase/__init__.py: adds StringOption

2007-10-13  Stephane Charette <stephanecharette@gmail.com>
	* src/plugins/rel_pt.py: new file (Portuguese) contributed by Duarte
	Loreto <happyguy_pt@hotmail.com>
	* src/plugins/Makefile.am: added rel_pt.py
	* po/POTFILES.in: added rel_pt.py

2007-10-12  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 
	0001252: Unicode error in NarrativeWeb.py in gramps3.0

2007-10-12  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/unused.glade: Do not translate GTK stock ids.

2007-10-12  Brian Matherly <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: 
	* src/Sort.py: (use locale.strcoll for sorting)
	0001238: Web report: sort references for places and media

2007-10-12  Don Allingham  <don@gramps-project.org>
	* src/gen/lib/note.py (Note.get): fix typo

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/gramps_main.py: don't create filters dir, not needed

2007-10-12 Benny Malengier <benny.malengier@gramps-project.org> 
	* src/Filters/Rules/Event/_MatchesSourceFilter.py: new filter
	* src/Filters/Rules/Event/__init__.py: load new filter
	* src/Filters/Rules/Event/Makefile.am: distribute
	* src/Filters/Rules/Person/_MatchesEventFilter.py: new filter
	* src/Filters/Rules/Person/__init__.py: load new filter
	* src/Filters/Rules/Person/Makefile.am: distribute